is_debug = true 
dcheck_always_on=true
v8_static_library=true
v8_enable_slow_dchecks = true
v8_enable_v8_checks = true
v8_enable_verify_heap = true
v8_enable_verify_csa = true
v8_enable_verify_predictable = true
v8_enable_backtrace = true
v8_enable_fast_mksnapshot = true
v8_optimized_debug = false
is_asan = true
is_component_build = false
target_cpu = "x64"
